# SpLLT

./: .travis.yml  CMakeLists.txt  LICENSE  README.md  TODO.org  installspral.sh  makebuild.sh  parselog_gpu.py  run_tests_job.sh  run_tests_list.sh  run_tests_list_job.sh  run_tests_list_trace_job.sh  run_tests_loop.sh  run_tests_trace_job.sh  spllt_test.F90
SpLLT/: CMakeLists.txt  Makefile.rules.inc  get_wtime.c  prep.sh  run_pastix.F90  run_tests_job.sh  run_tests_list_trace_job.sh
SpLLT/src/: CMakeLists.txt  spllt_analyse_mod.F90  spllt_data_mod.F90  spllt_error_mod.F90  spllt_factorization_mod.F90  spllt_factorization_task_mod.F90  spllt_kernels_mod.F90  trace_mod.F90
SpLLT/src/StarPU/: spllt_starpu_factorization_mod.F90  spllt_starpu_kernels.c
aux/: hpc2n_run_tests_job.sh  list.matrix  run_tests_job.sh  run_tests_list.sh  run_tests_loop.sh  run_tests_pde_job.sh  run_tests_poisson2d.sh  run_tests_poisson3d.sh  run_tests_ssids_gpuonly.sh  run_tests_ssids_gpuonly_aux.sh
bench_kernels/: Makefile  common.hpp  make.inc
data/: cmp_dag_stats.py  cmp_eff.gp  cmp_eff.py  cmp_eff_pde.py  cmp_facto.gp  cmp_facto.py  cmp_facto_pde.gp  cmp_facto_pde.py  cmp_facto_ptg.py  cmp_facto_seq.py  cmp_prune.gp  cmp_prune.py  cmp_task_insert.py  datafile.py  table_cmp_facto.pl  table_cmp_facto_taskinsert.tex
doc/: Makefile
drivers/: run_ma87.f90  spllt_new_test.F90  spllt_omp.F90  spllt_omp_bench.F90  spllt_test.F90
include/: spllt_iface.h
multiChol/: AlignedCallocBlock.hpp  Makefile  SimdVec.hpp  bench.cc  cpu_wrappers.hpp  multichol.cc  multichol.hpp  multichol_fortran.f90
qr/: Makefile  bench  bench.cc  (+4 more)
spLLT/: CMakeLists.txt  Make.inc  Makefile  Makefile.rules.inc  cleantrace.sh  get_wtime_mod.F90  hsl_ma87d.F90  hsl_ma87d.f90  hsl_ma87dt.F90  parsetrace.py  prep.sh  run_ma87.f90  run_test_list_job.sh  run_tests.sh  run_tests_list.sh  run_tests_list_job.sh  run_tests_loop.sh  run_tests_trace.sh  spllt_analyse_mod.F90  spllt_data_mod.F90  spllt_factorization_mod.F90  spllt_factorization_mod.f90  spllt_factorization_task_mod.F90  spllt_kernels_mod.F90  spllt_mod.F90  spllt_mod.f90  spllt_ptg_mod.F90  spllt_starpu_factorization_mod.F90  spllt_starpu_kernels.c  spllt_stf_mod.F90  spllt_stf_mod.f90  spllt_test.F90  spllt_test.f90  spllt_utils_mod.F90  starpu_f_mod.F90  starpu_f_wrappers.c
spLLT/PaRSEC/: factorize.jdf  spllt_parsec_blk_data.c  spllt_parsec_blk_data.h  spllt_parsec_data.c  spllt_parsec_factorization_mod.F90  spllt_parsec_mod.F90  spllt_parsec_wrap.c
spLLT/StarPU/: expand_buffer_kernels.cu  spllt_starpu_factorization_mod.F90  spllt_starpu_kernels.c  starpu_f_wrappers.c
spLLT/data/: LatexPrint.pm  ValueExtractor.pm  cmp_facto.gp  cmp_facto.pl  cmp_facto.py  cmp_facto.tex  cmp_facto_eff.py  cmp_facto_ptg.py  cmp_facto_seq.py  cmp_task_insert.py  latexprint.py  table_cmp_facto.pl  table_cmp_facto.tex  table_cmp_facto_taskinsert.tex  table_sirocco_cmp_facto.tex  traceutils.py  vextractor.py
spLLT/src/: CMakeLists.txt  spllt_analyse_mod.F90  spllt_c_interface.F90  spllt_data_mod.F90  spllt_factorization_mod.F90  spllt_factorization_task_mod.F90  spllt_factorize_node.F90  spllt_kernels_mod.F90  spllt_mod.F90  spllt_ptg_mod.F90  spllt_stf_factorization_mod.F90
spLLT/src/PaRSEC/: spllt_parsec_mod.F90  spllt_parsec_wrap.c
spLLT/src/StarPU/: spllt_starpu_factorization_mod.F90  spllt_starpu_kernels.c  starpu_f_wrappers.c
src/: CMakeLists.txt  get_wtime_mod.F90  hsl_ma87d.F90  spllt_analyse_mod.F90  spllt_bwd_block_cases.F90  spllt_bwd_update_cases.F90  spllt_c_interface.F90  spllt_data_mod.F90  spllt_error_mod.F90  spllt_factorization_mod.F90  spllt_factorization_task_mod.F90  spllt_fwd_block_cases.F90  spllt_fwd_update_cases.F90  spllt_kernels_mod.F90  spllt_mod.F90  spllt_ptg_mod.F90  spllt_solve_bwd_block_worker.F90  spllt_solve_dep_mod.F90  spllt_solve_fwd_block_omp_decl.F90  spllt_solve_fwd_block_worker.F90  spllt_solve_fwd_update_omp_decl.F90  spllt_solve_fwd_update_worker.F90  spllt_solve_kernels_mod.F90  spllt_solve_mod.F90  spllt_solve_task_mod.F90  spllt_stf_factorization_mod.F90  spllt_stf_mod.F90  spllt_tree_stat_mod.F90  spllt_utils_mod.F90  task_manager.F90  task_manager_omp.F90  task_manager_seq.F90  timer_mod.F90  trace_mod.F90  utils_mod.F90  worker_info_mod.F90
src/PaRSEC/: data.c  data.h  factorize.jdf  gather.jdf  spllt_data.c  spllt_data.h  spllt_parsec_blk_data.c  spllt_parsec_blk_data.h  spllt_parsec_data.c  spllt_parsec_data.h  spllt_parsec_factorization_mod.F90  spllt_parsec_mod.F90  spllt_parsec_wrap.c
src/StarPU/: expand_buffer_kernels.cu  spllt_starpu_factorization_mod.F90  spllt_starpu_kernels.c  starpu_f_mod.F90  starpu_f_wrappers.c
src/include/: spllt_bwd_block_cases.F90  spllt_bwd_block_cases.F90.inc  spllt_bwd_block_il2_cases.F90.inc  spllt_bwd_block_il_cases.F90.inc  spllt_bwd_block_nodep.F90  spllt_bwd_node_cases.F90  spllt_bwd_node_cases.F90.inc  spllt_bwd_node_il2_cases.F90.inc  spllt_bwd_node_il_cases.F90.inc  spllt_bwd_node_nodep.F90  spllt_bwd_update_cases.F90.inc  spllt_bwd_update_il2_cases.F90.inc  spllt_bwd_update_il_cases.F90.inc  spllt_bwd_update_nodep.F90  spllt_fwd_block_cases.F90  spllt_fwd_block_cases.F90.inc  spllt_fwd_block_cases_il.F90.inc  spllt_fwd_block_il2_cases.F90.inc  spllt_fwd_block_il_cases.F90.inc  spllt_fwd_block_nodep.F90  spllt_fwd_update_cases.F90.inc  spllt_fwd_update_cases_il.F90.inc  spllt_fwd_update_il2_cases.F90.inc  spllt_fwd_update_il_cases.F90.inc  spllt_fwd_update_nodep.F90  spllt_solve_bwd_block_il2_omp_decl.F90.inc  spllt_solve_bwd_block_il2_worker.F90.inc  spllt_solve_bwd_block_il_omp_decl.F90.inc  spllt_solve_bwd_block_il_worker.F90.inc  spllt_solve_bwd_block_omp_decl.F90.inc  spllt_solve_bwd_block_worker.F90.inc  spllt_solve_bwd_node_il2_omp_decl.F90.inc  spllt_solve_bwd_node_il2_worker.F90.inc  spllt_solve_bwd_node_il_omp_decl.F90.inc  spllt_solve_bwd_node_il_worker.F90.inc  spllt_solve_bwd_node_omp_decl.F90.inc  spllt_solve_bwd_node_worker.F90.inc  spllt_solve_bwd_update_il2_omp_decl.F90.inc  spllt_solve_bwd_update_il2_worker.F90.inc  spllt_solve_bwd_update_il_worker.F90.inc  (+14 more)
(+140 files in other folders)
